--- a/web_server/package.json
+++ b/web_server/package.json
@@ -33,6 +33,7 @@
     "express-mongo-sanitize": ">=2.2.0",
     "express-session": "^1.17.1",
     "jquery": "^3.3.1",
+    "lodash.escaperegexp": ">=4.1.2",
     "mongoose": "^6.2.5",
     "morgan": "^1.9.1",
     "newrelic": "^8.7.1",
